Update makefiles and README.md

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,5 +1,5 @@
 CC=g++
-CFLAGS=-Wall -fPIC -Ofast -march=armv6zk -mcpu=arm1176jzf-s -mfloat-abi=hard -mfpu=vfp -std=c++0x -DLINUX
+CFLAGS=-Wall -fPIC -Ofast -march=armv6zk -mcpu=arm1176jzf-s -mfloat-abi=hard -mfpu=vfp -std=c++0x
 LDFLAGS=-lnRF24L01p -lbcm2835
 SOURCES=$(wildcard *.cpp)
 OBJECTS=$(SOURCES:.cpp=)
